links and pictures

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Links</title>
+    <title>Chewins' Cool Links page</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
     </style>
@@ -15,61 +15,108 @@
 <body>
     <div id="container-top">
         <div id="masthead">
-            <h1>Links to make you look</h1>
+            <h1>Chewins' Cool links</h1>
         </div>
         <div id="content-holder">
-            <h4>Something about these links</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.
-                Viverra maecenas accumsan lacus vel facilisis. Massa tempor nec feugiat nisl pretium fusce.
-                Feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Enim lobortis scelerisque
-                fermentum dui faucibus in ornare quam.
-                Non curabitur gravida arcu ac. Elementum eu facilisis sed odio morbi quis commodo. Tristique nulla
-                aliquet enim tortor at.
-                Vitae nunc sed velit dignissim sodales ut eu sem integer. Sit amet purus gravida quis blandit turpis
-                cursus.
+            <h4>About</h4>
+            <p>This page contains various links about things i found helpful or interesting.
+                Following are links about artists i like, a link towards a playlist of cool 
+                art stuff to learn, a few referencing websites that i enjoy, a few links to learn
+                how to play smash brothers at a competitive level, and some of my friends' instagrams!
+                Hope you enjoy!
             </p>
             <img id="transparent-flower" src="images/trans-flower.png" width="200px">
             <div class="links-block">
-                <h4>Link category</h4>
-                <a href="https://www.nua.ac.uk" target="_blank">
-                    <p>Norwich Univestity of the Arts</p>
+                <h4>Cool artists</h4>
+                <a href="https://www.instagram.com/matthew.s.armstrong/" target="_blank">
+                    <p>Matthew S. Armstrong</p>
+                </a>
+                <a href="https://www.instagram.com/slawekfedorczuk/" target="_blank">
+                    <p>Slawek Fedorczuk</p>
+                </a>
+                <a href="https://www.instagram.com/bouletcorp/" target="_blank">
+                    <p>Boulet</p>
+                </a>
+                <a href="https://www.instagram.com/rt0no/" target="_blank">
+                    <p>rt0no</p>
+                </a>
+                <a href="https://www.instagram.com/sungajosh/" target="_blank">
+                    <p>Josh Sunga</p>
+                </a>
+                <a href="https://www.instagram.com/maruti_bitamin/" target="_blank">
+                    <p>Maruti Bitamin</p>
+                </a>
+                <a href="https://www.instagram.com/hiziripro/" target="_blank">
+                    <p>Satoshi Matsuura</p>
+                </a>
+                <a href="https://www.instagram.com/bandaminta/" target="_blank">
+                    <p>Gabriella Szendrey</p>
+                </a>
+                <a href="https://www.instagram.com/kekeflipnote/" target="_blank">
+                    <p>Kekeflipnote</p>
+                </a>
+                <a href="https://www.instagram.com/ninjajo_art/" target="_blank">
+                    <p>Katerina Belikova</p>
+                </a>
+                <a href="https://www.instagram.com/davilorium/" target="_blank">
+                    <p>David Orellana</p>
+                </a>
+                <a href="https://www.instagram.com/gregfromenteau_art/" target="_blank">
+                    <p>Gregory Fromenteau</p>
                 </a>
             </div>
             <div class="links-block">
-                <h4>Link category</h4>
-                <a href="https://www.nua.ac.uk" target="_blank">
-                    <p>Norwich Univestity of the Arts</p>
+                <h4>artsy tutorials</h4>
+                <a href="https://www.youtube.com/watch?v=g3ULGk9s978&list=WL&index=2&t=1s" target="_blank">
+                    <p>Youtube playlist of various stuff</p>
                 </a>
             </div>
             <div class="links-block">
-                <h4>Link category</h4>
-                <a href="https://www.nua.ac.uk" target="_blank">
-                    <p>Norwich Univestity of the Arts</p>
+                <h4>Cool Websites</h4>
+                <a href="https://characterdesignreferences.com/visual-library" target="_blank">
+                    <p>Banger character design references</p>
+                </a>
+                <a href="https://x6ud.github.io/#/" target="_blank">
+                    <p>Awesome skull references</p>
+                </a>
+                <a href="https://sketchfab.com/3d-models/asaro-head-9d26548182f8465a8e97371a9170561e" target="_blank">
+                    <p>Nice head reference</p>
                 </a>
             </div>
             <div class="links-block">
-                <h4>Link category</h4>
-                <a href="https://www.nua.ac.uk" target="_blank">
-                    <p>Norwich Univestity of the Arts</p>
+                <h4>Get good at smash brothers ultimate</h4>
+                <a href="https://www.youtube.com/watch?v=ta3L35wsE6o&t=14s" target="_blank">
+                    <p>Introduction</p>
+                </a>
+                <a href="https://www.youtube.com/watch?v=6wjIC6Q0Hkw" target="_blank">
+                    <p>Picking a main</p>
+                </a>
+                <a href="https://smashcords.com/smash-5" target="_blank">
+                    <p>Finding your character's discord</p>
+                </a>
+                <a href="https://www.youtube.com/watch?v=DrBWKkO9OeU&t=541s" target="_blank">
+                    <p>Using Training mode</p>
                 </a>
             </div>
             <div class="links-block">
-                <h4>Link category</h4>
-                <a href="https://www.nua.ac.uk" target="_blank">
-                    <p>Norwich Univestity of the Arts</p>
+                <h4>Support my Friends!</h4>
+                <a href="https://www.instagram.com/lapinlambda/" target="_blank">
+                    <p>Lapin Lambda</p>
                 </a>
-            </div>
-            <div class="links-block">
-                <h4>Link category</h4>
-                <a href="https://www.nua.ac.uk" target="_blank">
-                    <p>Norwich Univestity of the Arts</p>
+                <a href="https://www.instagram.com/agathe_di_stefano/" target="_blank">
+                    <p>Agathe Di Stefano</p>
                 </a>
-            </div>
-            <div class="links-block">
-                <h4>Link category</h4>
-                <a href="https://www.nua.ac.uk" target="_blank">
-                    <p>Norwich Univestity of the Arts</p>
+                <a href="https://www.instagram.com/guildetrobien/" target="_blank">
+                    <p>Darius Luza and Anthony Rigaud</p>
+                </a>
+                <a href="https://www.instagram.com/eidolon_s/" target="_blank">
+                    <p>Arthur K.</p>
+                </a>
+                <a href="https://www.instagram.com/rominosaurus/" target="_blank">
+                    <p>Romi</p>
+                </a>
+                <a href="https://www.instagram.com/super_adele/" target="_blank">
+                    <p>Adèle Lefèvre</p>
                 </a>
             </div>
         </div>
