--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,12 +20,12 @@
         <div id="content-holder">
             <h4>About</h4>
             <p>This page contains various links about things i found helpful or interesting.
-                Following are links about artists i like, a link towards a playlist of cool 
+                Following are links about artists i like, a link towards a playlist of cool
                 art stuff to learn, a few referencing websites that i enjoy, a few links to learn
                 how to play smash brothers at a competitive level, and some of my friends' instagrams!
                 Hope you enjoy!
             </p>
-            <img id="transparent-flower" src="images/trans-flower.png" width="200px">
+            <img id="funsketch" src="images/fun sketch.jpg" width="200px">
             <div class="links-block">
                 <h4>Cool artists</h4>
                 <a href="https://www.instagram.com/matthew.s.armstrong/" target="_blank">
