--- a/index.html
+++ b/index.html
@@ -6,117 +6,162 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chewins' Cool Links page</title>
+    <!-- names the page on the tab-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
+        /* imports a perticular font-style */
     </style>
     <link rel="stylesheet" href="CSS/style.css" />
+    <!-- allows the html to refer to the css style sheet -->
 </head>
 
 <body>
     <div id="container-top">
+    <!-- creates container with id object "container-top" -->
         <div id="masthead">
+        <!-- creates container with id object "masthead" -->
             <h1>Chewins' Cool links</h1>
-        </div>
+            <!-- creates large intro text to give a name to the page -->
+        </div> 
         <div id="content-holder">
+            <!-- creates container with id object "content-holder" -->
             <h4>About</h4>
+            
             <p>This page contains various links about things i found helpful or interesting.
                 Following are links about artists i like, a link towards a playlist of cool
                 art stuff to learn, a few referencing websites that i enjoy, a few links to learn
                 how to play smash brothers at a competitive level, and some of my friends' instagrams!
                 Hope you enjoy!
             </p>
+            <!-- adds a paragraph about the page -->
             <img id="funsketch" src="images/fun sketch.jpg" width="200px">
+            <!-- adds an image to the page, following the "funsketch" id style -->
             <div class="links-block">
+            <!-- creates a container with id object "links-block" -->
                 <h4>Cool artists</h4>
                 <a href="https://www.instagram.com/matthew.s.armstrong/" target="_blank">
                     <p>Matthew S. Armstrong</p>
+                <!-- adds a link with text "Matthew S. Armstrong" -->                    
                 </a>
                 <a href="https://www.instagram.com/slawekfedorczuk/" target="_blank">
                     <p>Slawek Fedorczuk</p>
+                <!-- adds a link with text "Slawek Fedorczuk" -->                    
                 </a>
                 <a href="https://www.instagram.com/bouletcorp/" target="_blank">
                     <p>Boulet</p>
+                <!-- adds a link with text "Boulet" -->                    
                 </a>
                 <a href="https://www.instagram.com/rt0no/" target="_blank">
                     <p>rt0no</p>
+                <!-- adds a link with text "" -->                    
                 </a>
                 <a href="https://www.instagram.com/sungajosh/" target="_blank">
                     <p>Josh Sunga</p>
+                <!-- adds a link with text "Josh Sunga" -->                    
                 </a>
                 <a href="https://www.instagram.com/maruti_bitamin/" target="_blank">
                     <p>Maruti Bitamin</p>
+                <!-- adds a link with text "Maruti Bitamin" -->                    
                 </a>
                 <a href="https://www.instagram.com/hiziripro/" target="_blank">
                     <p>Satoshi Matsuura</p>
+                <!-- adds a link with text "Satoshi Matsuura" -->                    
                 </a>
                 <a href="https://www.instagram.com/bandaminta/" target="_blank">
                     <p>Gabriella Szendrey</p>
+                <!-- adds a link with text "Gabriella Szendrey" -->                    
                 </a>
                 <a href="https://www.instagram.com/kekeflipnote/" target="_blank">
                     <p>Kekeflipnote</p>
+                <!-- adds a link with text "Kekeflipnote" -->                    
                 </a>
                 <a href="https://www.instagram.com/ninjajo_art/" target="_blank">
                     <p>Katerina Belikova</p>
+                <!-- adds a link with text "Katerina Belikova" -->                    
                 </a>
                 <a href="https://www.instagram.com/davilorium/" target="_blank">
                     <p>David Orellana</p>
+                <!-- adds a link with text "David Orellana" -->                    
                 </a>
                 <a href="https://www.instagram.com/gregfromenteau_art/" target="_blank">
                     <p>Gregory Fromenteau</p>
+                <!-- adds a link with text "Gregory Fromenteau" -->                    
                 </a>
             </div>
             <div class="links-block">
+            <!-- creates a container with id object "links-block" -->
                 <h4>artsy tutorials</h4>
+                <!-- names this perticular section of links -->
                 <a href="https://www.youtube.com/watch?v=g3ULGk9s978&list=WL&index=2&t=1s" target="_blank">
                     <p>Youtube playlist of various stuff</p>
+                <!-- adds a link with text "Youtube playlist of various stuff" -->                    
                 </a>
             </div>
             <div class="links-block">
+            <!-- creates a container with id object "links-block" -->
                 <h4>Cool Websites</h4>
+                <!-- names this perticular section of links -->
                 <a href="https://characterdesignreferences.com/visual-library" target="_blank">
                     <p>Banger character design references</p>
+                <!-- adds a link with text "Banger character design references" -->                    
                 </a>
                 <a href="https://x6ud.github.io/#/" target="_blank">
                     <p>Awesome skull references</p>
+                <!-- adds a link with text "Awesome skull references" -->                    
                 </a>
                 <a href="https://sketchfab.com/3d-models/asaro-head-9d26548182f8465a8e97371a9170561e" target="_blank">
                     <p>Nice head reference</p>
+                <!-- adds a link with text "Nice head reference" -->                    
                 </a>
             </div>
             <div class="links-block">
+            <!-- creates a container with id object "links-block" -->
                 <h4>Get good at smash brothers ultimate</h4>
+                <!-- names this perticular section of links -->
                 <a href="https://www.youtube.com/watch?v=ta3L35wsE6o&t=14s" target="_blank">
                     <p>Introduction</p>
+                <!-- adds a link with text "Introduction" -->
                 </a>
                 <a href="https://www.youtube.com/watch?v=6wjIC6Q0Hkw" target="_blank">
                     <p>Picking a main</p>
+                <!-- adds a link with text "Picking a main" -->
                 </a>
                 <a href="https://smashcords.com/smash-5" target="_blank">
                     <p>Finding your character's discord</p>
+                <!-- adds a link with text "Finding your character's discord" -->                
                 </a>
                 <a href="https://www.youtube.com/watch?v=DrBWKkO9OeU&t=541s" target="_blank">
                     <p>Using Training mode</p>
+                <!-- adds a link with text "Using Training mode" -->                    
                 </a>
             </div>
             <div class="links-block">
+            <!-- creates a container with id object "links-block" -->
                 <h4>Support my Friends!</h4>
+                <!-- names this perticular section of links -->
                 <a href="https://www.instagram.com/lapinlambda/" target="_blank">
                     <p>Lapin Lambda</p>
+                <!-- adds a link with text "Lapin Lambda" -->                    
                 </a>
                 <a href="https://www.instagram.com/agathe_di_stefano/" target="_blank">
                     <p>Agathe Di Stefano</p>
+                <!-- adds a link with text "Agathe Di Stefano" -->                    
                 </a>
                 <a href="https://www.instagram.com/guildetrobien/" target="_blank">
                     <p>Darius Luza and Anthony Rigaud</p>
+                <!-- adds a link with text "Darius Luza and Anthony Rigaud" -->                    
                 </a>
                 <a href="https://www.instagram.com/eidolon_s/" target="_blank">
                     <p>Arthur K.</p>
+                <!-- adds a link with text "Arthur K." -->                    
                 </a>
                 <a href="https://www.instagram.com/rominosaurus/" target="_blank">
                     <p>Romi</p>
+                <!-- adds a link with text "Romi" -->                    
                 </a>
                 <a href="https://www.instagram.com/super_adele/" target="_blank">
                     <p>Adèle Lefèvre</p>
+                <!-- adds a link with text "Adèle Lefèvre" -->                    
                 </a>
             </div>
         </div>
